--- a/modules/EmployeeApi/build.gradle
+++ b/modules/EmployeeApi/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
-	compileOnly project(":modules:Emp")
+	compileOnly project(":modules:Emp:Emp-api")
 }
