--- a/modules/EmployeeImpl/build.gradle
+++ b/modules/EmployeeImpl/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.dxp.api"
 	compileOnly project(":modules:EmployeeApi")
-	compileOnly project(":modules:Emp")
+	compileOnly project(":modules:Emp:Emp-service")
 }
